--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         content="physical medicine, chiropractic, pain management, physical therapy, South Bay Los Angeles, regenerative therapy">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
+
     <title>Goodlife Physical Medicine & Chiropractic | Pain Management & Physical Therapy</title>
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/home.css">
@@ -122,7 +124,8 @@
 
     <main>
         <section class="landing-hero" aria-label="New patient offer">
-            <div class="landing-hero-bg" style="background-image: url(./assets/images/home-hero-bg.jpg);" role="img" aria-hidden="true"></div>
+            <div class="landing-hero-bg" style="background-image: url(./assets/images/home-hero-bg.jpg);" role="img"
+                aria-hidden="true"></div>
             <div class="landing-hero-overlay"></div>
             <div class="landing-hero-inner">
                 <div class="landing-hero-left">
@@ -136,7 +139,8 @@
                         <li><span class="landing-check" aria-hidden="true"></span>X-Rays (if needed)</li>
                         <li><span class="landing-check" aria-hidden="true"></span>First Treatment.</li>
                     </ul>
-                    <p class="landing-hero-desc">Let our team of experts identify the root problem and solution to eliminate your pain for good.</p>
+                    <p class="landing-hero-desc">Let our team of experts identify the root problem and solution to
+                        eliminate your pain for good.</p>
                 </div>
                 <div class="landing-hero-right">
                     <form class="landing-consultation-form" aria-labelledby="consultation-heading">
@@ -153,7 +157,8 @@
                         </div>
                         <div class="landing-form-group">
                             <label for="landing-email" class="visually-hidden">Email</label>
-                            <input type="email" id="landing-email" name="email" class="landing-input" placeholder="EMAIL*" required>
+                            <input type="email" id="landing-email" name="email" class="landing-input"
+                                placeholder="EMAIL*" required>
                         </div>
                         <div class="landing-form-group">
                             <label for="landing-phone" class="visually-hidden">Phone</label>
@@ -161,7 +166,8 @@
                         </div>
                         <div class="landing-form-group landing-consent">
                             <input type="checkbox" id="landing-consent" name="consent" class="landing-checkbox">
-                            <label for="landing-consent" class="landing-consent-label">consent lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem</label>
+                            <label for="landing-consent" class="landing-consent-label">consent lorem ipsum lorem ipsum
+                                lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem</label>
                         </div>
                         <button type="submit" class="landing-submit-btn">CLAIM OFFER</button>
                     </form>
@@ -312,36 +318,122 @@
 
         <section class="testimonials-section" aria-labelledby="testimonials-heading">
             <h2 id="testimonials-heading">How We've Helped Others the Goodlife Way</h2>
-            <div class="testimonials-slider">
-                <button class="slider-arrow slider-prev" aria-label="Previous testimonials"><i
+            <div class="slider-row">
+                <button class="slider-arrow slider-prev swiper-button-prev" aria-label="Previous testimonials"><i
                         class="fa fa-chevron-left" aria-hidden="true"></i></button>
-                <div class="testimonials-track">
-                    <article class="testimonial-card">
-                        <img src="./assets/images/Jack.jpg" alt="Testimonial Avatar" class="testimonial-avatar">
-                        <p>Well run a full diagnostic test to see what's the problem and what's the best solution.</p>
-                    </article>
-                    <article class="testimonial-card">
-                        <img src="./assets/images/Cory.jpg" alt="Testimonial Avatar" class="testimonial-avatar">
-                        <p>From the moment I walked in, I felt cared for. The team took time to understand my pain and
-                            created a treatment plan that actually worked.</p>
-                    </article>
-                    <article class="testimonial-card">
-                        <div style="background-color: #cccccc;" aria-hidden="true"></div>
-                        <img src="./assets/images/Dave.png" alt="Testimonial Avatar" class="testimonial-avatar">
-                        <p>After years of chronic back pain, Goodlife gave me my life back. I can't recommend them
-                            enough.</p>
-                    </article>
+                <div class="testimonials-slider">
+                    <div class="swiper-wrapper">
+                        <article class="testimonial-card swiper-slide">
+                            <img src="./assets/images/Jack.jpg" alt="Testimonial Avatar" class="testimonial-avatar">
+                            <p>Well run a full diagnostic test to see what's the problem and what's the best solution.
+                            </p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <img src="./assets/images/Cory.jpg" alt="Testimonial Avatar" class="testimonial-avatar">
+                            <p>From the moment I walked in, I felt cared for. The team took time to understand my pain
+                                and
+                                created a treatment plan that actually worked.</p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <div style="background-color: #cccccc;" aria-hidden="true"></div>
+                            <img src="./assets/images/Dave.png" alt="Testimonial Avatar" class="testimonial-avatar">
+                            <p>After years of chronic back pain, Goodlife gave me my life back. I can't recommend them
+                                enough.</p>
+                        </article>
+
+                        <article class="testimonial-card swiper-slide">
+                            <img src="./assets/images/Jack.jpg" alt="Testimonial Avatar" class="testimonial-avatar">
+                            <p>Well run a full diagnostic test to see what's the problem and what's the best solution.
+                            </p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <img src="./assets/images/Cory.jpg" alt="Testimonial Avatar" class="testimonial-avatar">
+                            <p>From the moment I walked in, I felt cared for. The team took time to understand my pain
+                                and
+                                created a treatment plan that actually worked.</p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <div style="background-color: #cccccc;" aria-hidden="true"></div>
+                            <img src="./assets/images/Dave.png" alt="Testimonial Avatar" class="testimonial-avatar">
+                            <p>After years of chronic back pain, Goodlife gave me my life back. I can't recommend them
+                                enough.</p>
+                        </article>
+                    </div>
                 </div>
-                <button class="slider-arrow slider-next" aria-label="Next testimonials"><i class="fa fa-chevron-right"
-                        aria-hidden="true"></i></button>
+                <button class="slider-arrow slider-next swiper-button-next" aria-label="Next testimonials"><i
+                        class="fa fa-chevron-right" aria-hidden="true"></i></button>
             </div>
         </section>
     </main>
 
+    <!-- <div class="swiper" style="width: 600px; height: 300px;">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">Slide 1</div>
+            <div class="swiper-slide">Slide 2</div>
+            <div class="swiper-slide">Slide 3</div>
+            <div class="swiper-slide">Slide 1</div>
+            <div class="swiper-slide">Slide 2</div>
+            <div class="swiper-slide">Slide 3</div>
+            ...
+        </div>
+
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+    </div> -->
+
     <footer class="site-footer" role="contentinfo">
-        <p>Footer</p>
+        <div class="footer-inner">
+            <div class="footer-stay-connected">
+                <h3 class="footer-heading">Stay Connected</h3>
+                <p class="footer-desc">Join our weekly blog & newsletter for tips on healthy living</p>
+                <form class="footer-newsletter" aria-label="Newsletter signup">
+                    <label for="footer-email" class="visually-hidden">Email</label>
+                    <input type="email" id="footer-email" name="email" class="footer-email-input"
+                        placeholder="Enter your email" required>
+                    <button type="submit" class="footer-enter-btn">Enter</button>
+                </form>
+                <div class="footer-social" aria-label="Social media">
+                    <a href="#" class="footer-social-link" aria-label="Twitter"><i class="fa fa-twitter"
+                            aria-hidden="true"></i></a>
+                    <a href="#" class="footer-social-link" aria-label="Facebook"><i class="fa fa-facebook"
+                            aria-hidden="true"></i></a>
+                    <a href="#" class="footer-social-link" aria-label="Instagram"><i class="fa fa-instagram"
+                            aria-hidden="true"></i></a>
+                    <a href="#" class="footer-social-link" aria-label="YouTube"><i class="fa fa-youtube-play"
+                            aria-hidden="true"></i></a>
+                    <a href="#" class="footer-social-link" aria-label="LinkedIn"><i class="fa fa-linkedin"
+                            aria-hidden="true"></i></a>
+                </div>
+            </div>
+            <nav class="footer-nav" aria-label="Footer navigation">
+                <ul class="footer-links-col">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Locations</a></li>
+                    <li><a href="#">Blog</a></li>
+                </ul>
+                <ul class="footer-links-col">
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms of Service</a></li>
+                    <li><a href="#">Contact us</a></li>
+                </ul>
+            </nav>
+        </div>
     </footer>
     <script src="./js/header.js"></script>
+    <script>
+        const swiper = new Swiper('.testimonials-slider', {
+            loop: true,
+            slidesPerView: 3,
+            spaceBetween: 30,
+
+            navigation: {
+                nextEl: '.swiper-button-next',
+                prevEl: '.swiper-button-prev',
+            },
+        });
+    </script>
 </body>
 
 </html>
