--- a/home.html
+++ b/home.html
@@ -290,23 +290,41 @@
         <!-- Testimonials -->
         <section class="testimonials-section" aria-labelledby="testimonials-heading">
             <h2 id="testimonials-heading">How We've Helped Others the Goodlife Way</h2>
-            <div class="testimonials-slider swiper">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <article class="testimonial-card">
+            <div class="slider-row">
+                <button class="slider-arrow slider-prev swiper-button-prev" aria-label="Previous testimonials"><i
+                        class="fa fa-chevron-left" aria-hidden="true"></i></button>
+                <div class="testimonials-slider">
+                    <div class="swiper-wrapper">
+                        <article class="testimonial-card swiper-slide">
                             <img src="./assets/images/Jack.jpg" alt="Testimonial Avatar" class="testimonial-avatar">
-                            <p>Well run a full diagnostic test to see what's the problem and what's the best solution.</p>
+                            <p>Well run a full diagnostic test to see what's the problem and what's the best solution.
+                            </p>
                         </article>
-                    </div>
-                    <div class="swiper-slide">
-                        <article class="testimonial-card">
+                        <article class="testimonial-card swiper-slide">
                             <img src="./assets/images/Cory.jpg" alt="Testimonial Avatar" class="testimonial-avatar">
-                            <p>From the moment I walked in, I felt cared for. The team took time to understand my pain and
+                            <p>From the moment I walked in, I felt cared for. The team took time to understand my pain
+                                and
                                 created a treatment plan that actually worked.</p>
                         </article>
-                    </div>
-                    <div class="swiper-slide">
-                        <article class="testimonial-card">
+                        <article class="testimonial-card swiper-slide">
+                            <div style="background-color: #cccccc;" aria-hidden="true"></div>
+                            <img src="./assets/images/Dave.png" alt="Testimonial Avatar" class="testimonial-avatar">
+                            <p>After years of chronic back pain, Goodlife gave me my life back. I can't recommend them
+                                enough.</p>
+                        </article>
+
+                        <article class="testimonial-card swiper-slide">
+                            <img src="./assets/images/Jack.jpg" alt="Testimonial Avatar" class="testimonial-avatar">
+                            <p>Well run a full diagnostic test to see what's the problem and what's the best solution.
+                            </p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <img src="./assets/images/Cory.jpg" alt="Testimonial Avatar" class="testimonial-avatar">
+                            <p>From the moment I walked in, I felt cared for. The team took time to understand my pain
+                                and
+                                created a treatment plan that actually worked.</p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
                             <div style="background-color: #cccccc;" aria-hidden="true"></div>
                             <img src="./assets/images/Dave.png" alt="Testimonial Avatar" class="testimonial-avatar">
                             <p>After years of chronic back pain, Goodlife gave me my life back. I can't recommend them
@@ -314,8 +332,8 @@
                         </article>
                     </div>
                 </div>
-                <button class="slider-arrow slider-prev swiper-button-prev" aria-label="Previous testimonials"><i class="fa fa-chevron-left" aria-hidden="true"></i></button>
-                <button class="slider-arrow slider-next swiper-button-next" aria-label="Next testimonials"><i class="fa fa-chevron-right" aria-hidden="true"></i></button>
+                <button class="slider-arrow slider-next swiper-button-next" aria-label="Next testimonials"><i
+                        class="fa fa-chevron-right" aria-hidden="true"></i></button>
             </div>
         </section>
     </main>
@@ -327,15 +345,21 @@
                 <p class="footer-desc">Join our weekly blog & newsletter for tips on healthy living</p>
                 <form class="footer-newsletter" aria-label="Newsletter signup">
                     <label for="footer-email-home" class="visually-hidden">Email</label>
-                    <input type="email" id="footer-email-home" name="email" class="footer-email-input" placeholder="Enter your email" required>
+                    <input type="email" id="footer-email-home" name="email" class="footer-email-input"
+                        placeholder="Enter your email" required>
                     <button type="submit" class="footer-enter-btn">Enter</button>
                 </form>
                 <div class="footer-social" aria-label="Social media">
-                    <a href="#" class="footer-social-link" aria-label="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                    <a href="#" class="footer-social-link" aria-label="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                    <a href="#" class="footer-social-link" aria-label="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                    <a href="#" class="footer-social-link" aria-label="YouTube"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
-                    <a href="#" class="footer-social-link" aria-label="LinkedIn"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                    <a href="#" class="footer-social-link" aria-label="Twitter"><i class="fa fa-twitter"
+                            aria-hidden="true"></i></a>
+                    <a href="#" class="footer-social-link" aria-label="Facebook"><i class="fa fa-facebook"
+                            aria-hidden="true"></i></a>
+                    <a href="#" class="footer-social-link" aria-label="Instagram"><i class="fa fa-instagram"
+                            aria-hidden="true"></i></a>
+                    <a href="#" class="footer-social-link" aria-label="YouTube"><i class="fa fa-youtube-play"
+                            aria-hidden="true"></i></a>
+                    <a href="#" class="footer-social-link" aria-label="LinkedIn"><i class="fa fa-linkedin"
+                            aria-hidden="true"></i></a>
                 </div>
             </div>
             <nav class="footer-nav" aria-label="Footer navigation">
