--- a/index.html
+++ b/index.html
@@ -422,18 +422,7 @@
         </div>
     </footer>
     <script src="./js/header.js"></script>
-    <script>
-        const swiper = new Swiper('.testimonials-slider', {
-            loop: true,
-            slidesPerView: 3,
-            spaceBetween: 30,
-
-            navigation: {
-                nextEl: '.swiper-button-next',
-                prevEl: '.swiper-button-prev',
-            },
-        });
-    </script>
+    <script src="./js/testimonials-slider.js"></script>
 </body>
 
 </html>
