Upated landing form

--- a/index.html
+++ b/index.html
@@ -166,8 +166,18 @@
                         </div>
                         <div class="landing-form-group landing-consent">
                             <input type="checkbox" id="landing-consent" name="consent" class="landing-checkbox">
-                            <label for="landing-consent" class="landing-consent-label">consent lorem ipsum lorem ipsum
-                                lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem</label>
+                            <label for="landing-consent" class="landing-consent-label">I agree to the Privacy Policy and consent to be contacted.</label>
+                        </div>
+                        <div class="landing-form-group landing-consent">
+                            <input type="checkbox" id="landing-newsletter" name="newsletter" class="landing-checkbox">
+                            <label for="landing-newsletter" class="landing-consent-label">Subscribe to Newsletter &amp; Blog.</label>
+                        </div>
+                        <div class="landing-form-group landing-captcha">
+                            <span class="landing-captcha-heading">CAPTCHA</span>
+                            <div class="landing-captcha-box">
+                                <input type="radio" id="landing-captcha" name="captcha" value="not-robot" class="landing-radio">
+                                <label for="landing-captcha" class="landing-captcha-label">I'm not a robot</label>
+                            </div>
                         </div>
                         <button type="submit" class="landing-submit-btn">CLAIM OFFER</button>
                     </form>
@@ -325,38 +335,79 @@
                     <div class="swiper-wrapper">
                         <article class="testimonial-card swiper-slide">
                             <img src="./assets/images/Jack.jpg" alt="Testimonial Avatar" class="testimonial-avatar">
-                            <p>Well run a full diagnostic test to see what's the problem and what's the best solution.
+                            <h4>Alexis A.</h4>
+                            <p>The Staff Was Amazing All Of Them Were So Nice Helpful Definitely Would Recommend This
+                                Place I’m Very Happy With The Care I Received
                             </p>
                         </article>
                         <article class="testimonial-card swiper-slide">
                             <img src="./assets/images/Cory.jpg" alt="Testimonial Avatar" class="testimonial-avatar">
-                            <p>From the moment I walked in, I felt cared for. The team took time to understand my pain
-                                and
-                                created a treatment plan that actually worked.</p>
+                            <h4>Wendy H.</h4>
+                            <p>Dr. is great with explaining everything he is doing while working with you and listening
+                                to what works best for you. Very nice and clean office as well!</p>
                         </article>
                         <article class="testimonial-card swiper-slide">
-                            <div style="background-color: #cccccc;" aria-hidden="true"></div>
                             <img src="./assets/images/Dave.png" alt="Testimonial Avatar" class="testimonial-avatar">
-                            <p>After years of chronic back pain, Goodlife gave me my life back. I can't recommend them
-                                enough.</p>
+                            <h4>Karen M.</h4>
+                            <p>These Therapists know their jobs. You give them the target area and I guarantee you will
+                                be better! Plus give you exercises to do at home in between or after care discharge.</p>
                         </article>
 
                         <article class="testimonial-card swiper-slide">
                             <img src="./assets/images/Jack.jpg" alt="Testimonial Avatar" class="testimonial-avatar">
-                            <p>Well run a full diagnostic test to see what's the problem and what's the best solution.
+                            <h4>Chuck M.</h4>
+                            <p>They are very caring about their patients and their on top of their job and it’s slowly
+                                working for sure thank for taking care of me!!
                             </p>
                         </article>
                         <article class="testimonial-card swiper-slide">
                             <img src="./assets/images/Cory.jpg" alt="Testimonial Avatar" class="testimonial-avatar">
-                            <p>From the moment I walked in, I felt cared for. The team took time to understand my pain
-                                and
-                                created a treatment plan that actually worked.</p>
+                            <h4>Kiyomi V.</h4>
+                            <p>If your insurance can cover the costs, schedule your appointment ASAP.</p>
                         </article>
                         <article class="testimonial-card swiper-slide">
-                            <div style="background-color: #cccccc;" aria-hidden="true"></div>
                             <img src="./assets/images/Dave.png" alt="Testimonial Avatar" class="testimonial-avatar">
-                            <p>After years of chronic back pain, Goodlife gave me my life back. I can't recommend them
-                                enough.</p>
+                            <h4>Laura G.</h4>
+                            <p>Recomiendo este lugar me encanta muy buena atención del personal y del dr. Aun mas</p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <img src="./assets/images/Dave.png" alt="Testimonial Avatar" class="testimonial-avatar">
+                            <h4>Janice V.</h4>
+                            <p>I've said it before and I'll say it again. Goodlife Chiropractic in El Segundo is the
+                                hippest most user friendly office in town! You Go Dr. Matt!!</p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <img src="./assets/images/Dave.png" alt="Testimonial Avatar" class="testimonial-avatar">
+                            <h4>Destiny S.</h4>
+                            <p>Came here because of an injury and was nervous but Brock made me super comfortable and I
+                                have came here 3 times already and I feel 10 times better! Highly recommend</p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <img src="./assets/images/Dave.png" alt="Testimonial Avatar" class="testimonial-avatar">
+                            <h4>Colby P</h4>
+                            <p>Dr. Clements really wants to help his parents and takes the time to really listen to you.
+                                The front desk gals are always friendly without fail. I’m so happy I found this place!
+                            </p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <img src="./assets/images/Dave.png" alt="Testimonial Avatar" class="testimonial-avatar">
+                            <h4>Sarah K.</h4>
+                            <p>Dr. Jeff is awesome and so is Charlie. I walk in and the know me and I feel extremely
+                                comfortable knowing my health is priority. I leave better each time I visit. Luv luv
+                                them ....</p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <img src="./assets/images/Dave.png" alt="Testimonial Avatar" class="testimonial-avatar">
+                            <h4>Evan F.</h4>
+                            <p>Dr. Dave is great and found my shoulder problem quickly and eased my concerns and Leslie
+                                helped me so much with PT.</p>
+                        </article>
+                        <article class="testimonial-card swiper-slide">
+                            <img src="./assets/images/Dave.png" alt="Testimonial Avatar" class="testimonial-avatar">
+                            <h4>Pauline C.</h4>
+                            <p>Goodlife has been key to my physical health and pain management journey. I initially
+                                discovered this practice through Groupon and loved it so much that I’ve been going back
+                                weekly since August 2023…</p>
                         </article>
                     </div>
                 </div>
