--- a/new-patient.html
+++ b/new-patient.html
@@ -9,18 +9,21 @@
     <meta name="keywords"
         content="physical medicine, chiropractic, pain management, physical therapy, South Bay Los Angeles, regenerative therapy">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
+
     <title>Goodlife Physical Medicine & Chiropractic | Pain Management & Physical Therapy</title>
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/landing.css">
 </head>
 
 <body>
     <div class="top-banner">
         <h3>New Patient Special for only $39</h3>
     </div>
-    <!-- Header section -->
+
     <header class="header">
         <a href="#" class="logo-link">
             <img src="./assets/images/logo.png" alt="Goodlife Physical Medicine" class="logo-img">
@@ -120,49 +123,86 @@
     </header>
 
     <main>
-        <section class="hero-section" aria-label="Hero">
-            <div class="hero-content">
-                <h1 class="hero-heading-top">How can we help you today?</h1>
-                <div class="hero-service-buttons">
-                    <a href="#" class="hero-service-btn">Pain Management</a>
-                    <a href="#" class="hero-service-btn">Chiropractic</a>
-                    <a href="#" class="hero-service-btn">Physical Therapy</a>
-                    <a href="#" class="hero-service-btn">Botox for Migraines</a>
-                    <a href="#" class="hero-service-btn">Massage Therapy</a>
-                    <a href="#" class="hero-service-btn">Regenerative Medicine</a>
-                    <a href="#" class="hero-service-btn">Medical Weight Loss</a>
-                    <a href="#" class="hero-service-btn">Orthopedic</a>
-                    <a href="#" class="hero-service-btn">Physical Medicine</a>
+        <section class="landing-hero" aria-label="New patient offer">
+            <div class="landing-hero-bg" style="background-image: url(./assets/images/home-hero-bg.jpg);" role="img"
+                aria-hidden="true"></div>
+            <div class="landing-hero-overlay"></div>
+            <div class="landing-hero-inner">
+                <div class="landing-hero-left">
+                    <div class="landing-offer-price-row">
+                        <p class="landing-offer-price">$39</p>
+                        <p class="landing-offer-label">NEW PATIENT OFFER</p>
+                    </div>
+                    <h2 class="landing-offer-heading">New Patient Experience Includes:</h2>
+                    <ul class="landing-offer-list">
+                        <li><span class="landing-check" aria-hidden="true"></span>Focused Exam</li>
+                        <li><span class="landing-check" aria-hidden="true"></span>X-Rays (if needed)</li>
+                        <li><span class="landing-check" aria-hidden="true"></span>First Treatment.</li>
+                    </ul>
+                    <p class="landing-hero-desc">Let our team of experts identify the root problem and solution to
+                        eliminate your pain for good.</p>
                 </div>
-                <h2 class="hero-heading-bottom">Let our team of experts identify the root problem and solution to
-                    eliminate your pain for good.</h2>
-                <a href="#" class="hero-cta-btn">BOOK A FREE CONSULTATION</a>
+                <div class="landing-hero-right">
+                    <form class="landing-offer-form" aria-labelledby="consultation-heading">
+                        <h3 id="consultation-heading" class="landing-offer-title">Get a FREE Consultation</h3>
+                        <div class="landing-form-group">
+                            <label for="landing-location" class="visually-hidden">Location</label>
+                            <select id="landing-location" name="location" class="landing-input">
+                                <option value="">LOCATION</option>
+                            </select>
+                        </div>
+                        <div class="landing-form-group">
+                            <label for="landing-name" class="visually-hidden">Name</label>
+                            <input type="text" id="landing-name" name="name" class="landing-input" placeholder="NAME">
+                        </div>
+                        <div class="landing-form-group">
+                            <label for="landing-email" class="visually-hidden">Email</label>
+                            <input type="email" id="landing-email" name="email" class="landing-input"
+                                placeholder="EMAIL*" required>
+                        </div>
+                        <div class="landing-form-group">
+                            <label for="landing-phone" class="visually-hidden">Phone</label>
+                            <input type="tel" id="landing-phone" name="phone" class="landing-input" placeholder="PHONE">
+                        </div>
+                        <div class="landing-form-group landing-consent">
+                            <input type="checkbox" id="landing-consent" name="consent" class="landing-checkbox">
+                            <label for="landing-consent" class="landing-consent-label">I agree to the Privacy Policy and
+                                consent to be contacted.</label>
+                        </div>
+                        <div class="landing-form-group landing-consent">
+                            <input type="checkbox" id="landing-newsletter" name="newsletter" class="landing-checkbox">
+                            <label for="landing-newsletter" class="landing-consent-label">Subscribe to Newsletter &amp;
+                                Blog.</label>
+                        </div>
+                        <div class="landing-form-group landing-captcha">
+                            <div class="landing-captcha-box">
+                                <input type="radio" id="landing-captcha" name="captcha" value="not-robot"
+                                    class="landing-radio">
+                                <label for="landing-captcha" class="landing-captcha-label">I'm not a robot</label>
+                            </div>
+                        </div>
+                        <button type="submit" class="landing-submit-btn">CLAIM OFFER</button>
+                    </form>
+                </div>
             </div>
         </section>
 
-        <!-- Statistics Bar -->
-        <section class="stats-bar" aria-label="Practice statistics">
-            <div class="stats-inner">
-                <div class="stat-item">
-                    <span class="stat-number">24,000</span>
-                    <span class="stat-label">Happy clients</span>
-                </div>
-                <div class="stat-item">
-                    <span class="stat-number">4</span>
-                    <span class="stat-label">Locations</span>
-                </div>
-                <div class="stat-item">
-                    <span class="stat-number">15 Years</span>
-                    <span class="stat-label">Community favorite</span>
-                </div>
-                <div class="stat-item">
-                    <span class="stat-number">30+ Years</span>
-                    <span class="stat-label">experience</span>
-                </div>
+        <section class="landing-services" aria-labelledby="services-heading">
+            <h2 id="services-heading">All Things Physical Medicine Under One Roof:</h2>
+            <div class="hero-service-buttons">
+                <a href="#" class="hero-service-btn">Pain Management</a>
+                <a href="#" class="hero-service-btn">Chiropractic</a>
+                <a href="#" class="hero-service-btn">Physical Therapy</a>
+                <a href="#" class="hero-service-btn">Botox for Migraines</a>
+                <a href="#" class="hero-service-btn">Massage Therapy</a>
+                <a href="#" class="hero-service-btn">Regenerative Medicine</a>
+                <a href="#" class="hero-service-btn">Medical Weight Loss</a>
+                <a href="#" class="hero-service-btn">Orthopedic</a>
+                <a href="#" class="hero-service-btn">Physical Medicine</a>
             </div>
+            <a href="#" class="section-btn section-btn-green">Book a free consultation</a>
         </section>
 
-        <!-- Know Options & Affordability -->
         <section class="options-affordability" aria-labelledby="options-heading">
             <div class="options-affordability-inner">
                 <article class="options-column">
@@ -209,21 +249,27 @@
             </div>
         </section>
 
-        <!-- New Patient Special -->
-        <section class="new-patient-special" aria-labelledby="special-heading">
-            <div class="new-patient-special-inner">
-                <article class="special-content">
-                    <h2 id="special-heading">New Patient Special</h2>
-                    <p class="special-price">For Only $39</p>
-                    <p>Includes a full Exam, X-Rays (if needed), & First Treatment.</p>
-                    <a href="./new-patient.html" class="section-btn section-btn-green">Claim Offer</a>
-                </article>
-                <div class="special-image" style="background-image: url(./assets/images/New\ Patient\ Special.jpg);" role="img"
-                    aria-label="Doctor examining X-ray"></div>
+        <section class="stats-bar" aria-label="Practice statistics">
+            <div class="stats-inner">
+                <div class="stat-item">
+                    <span class="stat-number">24,000</span>
+                    <span class="stat-label">Happy clients</span>
+                </div>
+                <div class="stat-item">
+                    <span class="stat-number">4</span>
+                    <span class="stat-label">Locations</span>
+                </div>
+                <div class="stat-item">
+                    <span class="stat-number">15 Years</span>
+                    <span class="stat-label">Community favorite</span>
+                </div>
+                <div class="stat-item">
+                    <span class="stat-number">30+ Years</span>
+                    <span class="stat-label">experience</span>
+                </div>
             </div>
         </section>
 
-        <!-- About Us -->
         <section class="about-section" aria-labelledby="about-heading">
             <div class="about-inner">
                 <img src="./assets/images/About us.webp" class="about-image" alt="About Us" />
@@ -242,7 +288,6 @@
             </div>
         </section>
 
-        <!-- Locations -->
         <section class="locations-section" aria-labelledby="locations-heading">
             <h2 id="locations-heading">4 Locations: Serving the South Bay of Los Angeles</h2>
             <div class="locations-grid">
@@ -268,9 +313,6 @@
                 </a>
             </div>
 
-
-
-            <!-- Schedule -->
             <div class="schedule-section" aria-labelledby="schedule-heading">
                 <div class="schedule-sectione-inner">
                     <img src="./assets/images/map.jpg" alt="Map" class="schedule-map">
@@ -285,7 +327,6 @@
             </div>
         </section>
 
-        <!-- Testimonials -->
         <section class="testimonials-section" aria-labelledby="testimonials-heading">
             <h2 id="testimonials-heading">How We've Helped Others the Goodlife Way</h2>
             <div class="slider-row">
@@ -382,8 +423,12 @@
             <div class="footer-stay-connected">
                 <h3 class="footer-heading">Stay Connected</h3>
                 <p class="footer-desc">Join our weekly blog & newsletter for tips on healthy living</p>
-                <iframe id="newsletter-submit-frame" name="newsletter-submit-frame" title="Newsletter submit" class="visually-hidden" style="position:absolute;width:0;height:0;border:0" aria-hidden="true"></iframe>
-                <form class="footer-newsletter" id="footer-newsletter-form" aria-label="Newsletter signup" method="POST" action="https://script.google.com/macros/s/AKfycbyFbXHG9rn8VfWbxLZWqlentpgO4SIb4fANbTzsh9Xp5vWO9jJciXWX4abEdruU1llq/exec" target="newsletter-submit-frame">
+                <iframe id="newsletter-submit-frame" name="newsletter-submit-frame" title="Newsletter submit"
+                    class="visually-hidden" style="position:absolute;width:0;height:0;border:0"
+                    aria-hidden="true"></iframe>
+                <form class="footer-newsletter" id="footer-newsletter-form" aria-label="Newsletter signup" method="POST"
+                    action="https://script.google.com/macros/s/AKfycbyFbXHG9rn8VfWbxLZWqlentpgO4SIb4fANbTzsh9Xp5vWO9jJciXWX4abEdruU1llq/exec"
+                    target="newsletter-submit-frame">
                     <label for="footer-email" class="visually-hidden">Email</label>
                     <input type="email" id="footer-email" name="Email" class="footer-email-input"
                         placeholder="Enter your email" required>
