About page work in progress

--- a/chiropractic-in-el-segundo.html
+++ b/chiropractic-in-el-segundo.html
@@ -29,7 +29,7 @@
         <nav class="nav-container">
             <button class="mobile-menu-close" aria-label="Close menu"><span class="close-icon">×</span></button>
             <ul class="nav-links">
-                <li><a href="#" class="nav-link-item">About</a></li>
+                <li><a href="./about.html" class="nav-link-item">About</a></li>
                 <li class="nav-item-dropdown">
                     <a href="#" class="nav-link-item nav-link-with-arrow">Conditions</a>
                     <ul class="dropdown-menu">
@@ -88,7 +88,7 @@
                     </ul>
                 </li>
                 <li><a href="#" class="nav-link-item">Locations</a></li>
-                <li><a href="#" class="nav-link-item">Blog</a></li>
+                <li><a href="./blog.html" class="nav-link-item">Blog</a></li>
             </ul>
         </nav>
         <div class="action-group action-group-desktop">
@@ -151,8 +151,20 @@
                         </div>
                         <div class="landing-form-group landing-consent">
                             <input type="checkbox" id="landing-consent" name="consent" class="landing-checkbox">
-                            <label for="landing-consent" class="landing-consent-label">consent lorem ipsum lorem ipsum
-                                lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem</label>
+                            <label for="landing-consent" class="landing-consent-label">I agree to the Privacy Policy and
+                                consent to be contacted.</label>
+                        </div>
+                        <div class="landing-form-group landing-consent">
+                            <input type="checkbox" id="landing-newsletter" name="newsletter" class="landing-checkbox">
+                            <label for="landing-newsletter" class="landing-consent-label">Subscribe to Newsletter &amp;
+                                Blog.</label>
+                        </div>
+                        <div class="landing-form-group landing-captcha">
+                            <div class="landing-captcha-box">
+                                <input type="radio" id="landing-captcha" name="captcha" value="not-robot"
+                                    class="landing-radio">
+                                <label for="landing-captcha" class="landing-captcha-label">I'm not a robot</label>
+                            </div>
                         </div>
                         <button type="submit" class="landing-submit-btn">CLAIM OFFER</button>
                     </form>
@@ -185,8 +197,11 @@
                         <p class="option-text">Our team of diverse professionals combine a holistic approach to address
                             pain at the source.</p>
                     </div>
-                    <div class="options-video" data-youtube-id="SE9E2UcAi1w" data-youtube-start="11" style="background-image: url(https://img.youtube.com/vi/SE9E2UcAi1w/sddefault.jpg);" aria-label="Video: Patient treatment demonstration">
-                        <button class="video-play-btn" aria-label="Play video" type="button"><i class="fa fa-play" aria-hidden="true"></i></button>
+                    <div class="options-video" data-youtube-id="SE9E2UcAi1w" data-youtube-start="11"
+                        style="background-image: url(https://img.youtube.com/vi/SE9E2UcAi1w/sddefault.jpg);"
+                        aria-label="Video: Patient treatment demonstration">
+                        <button class="video-play-btn" aria-label="Play video" type="button"><i class="fa fa-play"
+                                aria-hidden="true"></i></button>
                     </div>
                     <a href="#" class="section-btn section-btn-green">Book a free consultation</a>
                 </article>
@@ -230,8 +245,8 @@
                     <p>Includes a full Exam, X-Rays (if needed), & First Treatment.</p>
                     <a href="./new-patient.html" class="section-btn section-btn-green">Claim Offer</a>
                 </article>
-                <div class="special-image" style="background-image: url(./assets/images/New\ Patient\ Special.jpg);" role="img"
-                    aria-label="Doctor examining X-ray"></div>
+                <div class="special-image" style="background-image: url(./assets/images/New\ Patient\ Special.jpg);"
+                    role="img" aria-label="Doctor examining X-ray"></div>
             </div>
         </section>
 
@@ -279,8 +294,8 @@
                     <span class="location-name">Redondo Beach</span>
                 </a>
                 <a href="#" class="location-card">
-                    <div class="location-image" style="background-image: url(./assets/images/torrance.webp);"
-                        role="img" aria-label="Torrance location"></div>
+                    <div class="location-image" style="background-image: url(./assets/images/torrance.webp);" role="img"
+                        aria-label="Torrance location"></div>
                     <span class="location-name">Torrance</span>
                 </a>
                 <a href="#" class="location-card">
@@ -438,7 +453,7 @@
                     <li><a href="#">About</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Locations</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="./blog.html">Blog</a></li>
                 </ul>
                 <ul class="footer-links-col">
                     <li><a href="#">Privacy Policy</a></li>
