--- a/chiropractic-in-redondo-beach.html
+++ b/chiropractic-in-redondo-beach.html
@@ -29,7 +29,7 @@
         <nav class="nav-container">
             <button class="mobile-menu-close" aria-label="Close menu"><span class="close-icon">×</span></button>
             <ul class="nav-links">
-                <li><a href="#" class="nav-link-item">About</a></li>
+                <li><a href="./about.html" class="nav-link-item">About</a></li>
                 <li class="nav-item-dropdown">
                     <a href="#" class="nav-link-item nav-link-with-arrow">Conditions</a>
                     <ul class="dropdown-menu">
@@ -88,7 +88,7 @@
                     </ul>
                 </li>
                 <li><a href="#" class="nav-link-item">Locations</a></li>
-                <li><a href="#" class="nav-link-item">Blog</a></li>
+                <li><a href="./blog.html" class="nav-link-item">Blog</a></li>
             </ul>
         </nav>
         <div class="action-group action-group-desktop">
@@ -151,8 +151,20 @@
                         </div>
                         <div class="landing-form-group landing-consent">
                             <input type="checkbox" id="landing-consent" name="consent" class="landing-checkbox">
-                            <label for="landing-consent" class="landing-consent-label">consent lorem ipsum lorem ipsum
-                                lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem</label>
+                            <label for="landing-consent" class="landing-consent-label">I agree to the Privacy Policy and
+                                consent to be contacted.</label>
+                        </div>
+                        <div class="landing-form-group landing-consent">
+                            <input type="checkbox" id="landing-newsletter" name="newsletter" class="landing-checkbox">
+                            <label for="landing-newsletter" class="landing-consent-label">Subscribe to Newsletter &amp;
+                                Blog.</label>
+                        </div>
+                        <div class="landing-form-group landing-captcha">
+                            <div class="landing-captcha-box">
+                                <input type="radio" id="landing-captcha" name="captcha" value="not-robot"
+                                    class="landing-radio">
+                                <label for="landing-captcha" class="landing-captcha-label">I'm not a robot</label>
+                            </div>
                         </div>
                         <button type="submit" class="landing-submit-btn">CLAIM OFFER</button>
                     </form>
@@ -438,7 +450,7 @@
                     <li><a href="#">About</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Locations</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="./blog.html">Blog</a></li>
                 </ul>
                 <ul class="footer-links-col">
                     <li><a href="#">Privacy Policy</a></li>
