--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <span class="close-icon">×</span>
             </button>
             <ul class="nav-links">
-                <li><a href="#" class="nav-link-item">About</a></li>
+                <li><a href="./about.html" class="nav-link-item">About</a></li>
                 <li class="nav-item-dropdown">
                     <a href="#" class="nav-link-item nav-link-with-arrow">Conditions</a>
                     <ul class="dropdown-menu">
@@ -105,7 +105,7 @@
                     </ul>
                 </li>
                 <li><a href="#" class="nav-link-item">Locations</a></li>
-                <li><a href="#" class="nav-link-item">Blog</a></li>
+                <li><a href="./blog.html" class="nav-link-item">Blog</a></li>
             </ul>
         </nav>
         <div class="action-group action-group-desktop">
@@ -213,8 +213,7 @@
         <section class="new-patient-special" aria-labelledby="special-heading">
             <div class="new-patient-special-inner">
                 <article class="special-content">
-                    <h2 id="special-heading">New Patient Special</h2>
-                    <p class="special-price">For Only $39</p>
+                    <h2 id="special-heading">New Patient Special For Just $39</h2>
                     <p>Includes a full Exam, X-Rays (if needed), & First Treatment.</p>
                     <a href="./new-patient.html" class="section-btn section-btn-green">Claim Offer</a>
                 </article>
@@ -424,7 +423,7 @@
                     <li><a href="#">About</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Locations</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="./blog.html">Blog</a></li>
                 </ul>
                 <ul class="footer-links-col">
                     <li><a href="#">Privacy Policy</a></li>
