--- a/new-patient.html
+++ b/new-patient.html
@@ -34,7 +34,7 @@
                 <span class="close-icon">×</span>
             </button>
             <ul class="nav-links">
-                <li><a href="#" class="nav-link-item">About</a></li>
+                <li><a href="./about.html" class="nav-link-item">About</a></li>
                 <li class="nav-item-dropdown">
                     <a href="#" class="nav-link-item nav-link-with-arrow">Conditions</a>
                     <ul class="dropdown-menu">
@@ -108,7 +108,7 @@
                     </ul>
                 </li>
                 <li><a href="#" class="nav-link-item">Locations</a></li>
-                <li><a href="#" class="nav-link-item">Blog</a></li>
+                <li><a href="./blog.html" class="nav-link-item">Blog</a></li>
             </ul>
         </nav>
         <div class="action-group action-group-desktop">
@@ -469,7 +469,7 @@
                     <li><a href="#">About</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Locations</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="./blog.html">Blog</a></li>
                 </ul>
                 <ul class="footer-links-col">
                     <li><a href="#">Privacy Policy</a></li>
