Fix about page responsive

--- a/about.html
+++ b/about.html
@@ -186,7 +186,9 @@
             <div class="how-started-inner">
                 <h2 id="how-started-heading">How the Goodlife Started:</h2>
                 <div class="founder-quote">
-                    <img src="assets/images/Adam.png" alt="Founder photo" class="founder-quote-img left" />
+                    <div class="founder-quote-img-wrap">
+                        <img src="assets/images/Adam.png" alt="Founder photo" class="founder-quote-img" />
+                    </div>
                     <div class="founder-quote-text">
                         <p>"I became a pain management doctor because I could see firsthand how pain ruins so many lives
                             and I wanted to help. But I quickly learned that pain won't respond to just one thing.
@@ -198,8 +200,10 @@
                         </p>
                     </div>
                 </div>
-                <div class="founder-quote">
-                    <img src="assets/images/Dave.png" alt="Founder photo" class="founder-quote-img right" />
+                <div class="founder-quote founder-quote--reverse">
+                    <div class="founder-quote-img-wrap">
+                        <img src="assets/images/Dave.png" alt="Founder photo" class="founder-quote-img" />
+                    </div>
                     <div class="founder-quote-text">
                         <p>"I believe in whole-body wellness and have halped thousands of patients improve their
                             everyday lives through chiropractic. However, I had patients that needed more than
